marginally more responsive but still needs work

--- a/poster/index.html
+++ b/poster/index.html
@@ -54,7 +54,20 @@
 			be with others who understand their experience. Call (434) 872-
 			0047 to register.
 		</div>
+		<div class="footer">
+			<p>
+			434.872.0047<br>
+			www.thewomensinitiative.org<br>
+			info@thewomensinitiative.org<br>
+			Jefferson School Office<br>
+			233 4th St NW, 2nd Floor, Charlottesville<br>
+			Main Office<br>
+			1101 E High Street, Charlottesville<br>
+			</p>
+		</div>
+
 	</div>
+
 
 </body>
 </html>
