added logo, social media pdfs

--- a/poster/index.html
+++ b/poster/index.html
@@ -9,11 +9,11 @@
 <body>
 	<div class="circle">
 	</div><div class="title">
-		summer 2017 <span class="offerings">offerings</span><p>The offerings below are free & open to women <br>except where noted.
+		<a href="link.html" title="Register Here">summer 2017 <span class="offerings">offerings</span></a><p>The offerings below are free & open to women <br>except where noted.
 		They take place as listed except on major holidays.</p>
 		<p>The Women’s Initiative:
 		Providing vital mental health services<br> for women regardless of
-		ability to pay</p>
+		ability to pay.</p>
 	</div><div class="info-container">
 		<div class="column one">
 			<span class="hd">Sister Circle<br>
